# ev-fmwk

./: BUILD.bazel  CMakeLists.txt  THIRD_PARTY.md
cmake/: NodeApi.cmake  find-mqttc.cmake
everestjs/: CMakeLists.txt  conversion.cpp  conversion.hpp  conversions.cpp  conversions.hpp  everestjs.cpp  index.d.ts  index.js  js_exec_ctx.cpp  js_exec_ctx.hpp  logger.cpp  logger.hpp  package.json  thread_safe_callbacks.cpp  utils.hpp
everestjs/src/: everestjs.node.d.ts  index.ts
everestjs/src/native/: CMakeLists.txt  conversion.cpp  conversion.hpp  everestjs.cpp  logger.cpp  thread_safe_callbacks.cpp  thread_safe_callbacks.hpp
include/everest/: constants.hpp  everest.hpp  generated_module.hpp  generated_module_fwd.hpp  interface.hpp  module.hpp  module_adapter.hpp  module_peer.hpp  peer.hpp  runtime.hpp  types.hpp
include/everest/utils/: config.hpp  conversions.hpp  helpers.hpp  interface_defs.hpp  message_queue.hpp  message_worker.hpp  mqtt_abstraction.hpp  mqtt_abstraction_impl.hpp  mqtt_io_base.hpp  mqtt_io_mqttc.hpp  os.hpp  schema.hpp  thread.hpp
include/framework/: everest.hpp  module_adapter.hpp  runtime.hpp
include/utils/: config.hpp  conversions.hpp  message_queue.hpp  mqtt_abstraction.hpp  mqtt_abstraction_impl.hpp  thread.hpp
include/utils/error/: error_json.hpp
lib/: CMakeLists.txt  config.cpp  conversions.cpp  everest.cpp  generated_module.cpp  helpers.cpp  interface.cpp  message_queue.cpp  module.cpp  module_peer.cpp  mqtt_abstraction.cpp  mqtt_abstraction_impl.cpp  mqtt_io_base.cpp  mqtt_io_mqttc.cpp  os.cpp  peer.cpp  runtime.cpp  schema.cpp  thread.cpp  types.cpp
schemas/: CMakeLists.txt  config.json  manifest.json
src/: CMakeLists.txt  manager.cpp  sample_module.cpp
src/controller/: CMakeLists.txt
src/manager/: main.cpp  manager.cpp  manager.hpp  runtime_env.cpp  runtime_env.hpp  subprocess.cpp  subprocess.hpp
tests/: CMakeLists.txt  test_config.cpp  test_helpers.cpp  test_message_worker.cpp  test_module.cpp  test_module_peer.cpp  test_peer.cpp  test_schema.cpp  testing_helpers.cpp  testing_helpers.hpp
tests/examples/: CMakeLists.txt  ping.cpp  ping_pong.cpp
tests/resources/config/: mod2.json
tests/resources/config/mod1/: manifest.json
tests/resources/interfaces/: intf.json  intf2.json
tests/resources/ping_pong/interfaces/: ping_server.json
tests/resources/schema/: valid_config_0.json  valid_manifest_0.json
